# prompt-fight

./: .gitattributes  .gitignore  CLAUDE.md  DESIGN.md  GAME_MECHANICS.md  JUDGE.md  PROGRESS.md  SPEC.md
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml
backend/app/: config.py  judge.py  judge_prompt.py  main.py  models.py  moderation.py  resolver.py  rules.py  schemas.py  settings.py
backend/tests/: test_api.py  test_config.py  test_judge_eval.py  test_moderation.py  test_resolver.py  test_rules.py
backend/tests/fixtures/: judge_eval.json
config/: balance.json
frontend/: package-lock.json  package.json  vitest.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/_components/: Chips.tsx  CostPreview.tsx  GameBoard.tsx  HandoffScreen.tsx  Ledger.tsx  PlaybackLog.tsx  PlayerStatus.tsx  PromptPanel.tsx  StartScreen.tsx  StunnedScreen.tsx  UnitInspector.tsx  VictoryScreen.tsx
frontend/src/lib/: api.ts  game.test.ts  game.ts  site.test.ts  site.ts  types.ts
