[project]
name = "stickmancer-backend"
version = "0.1.0"
description = "Stickmancer backend: judge proxy + deterministic resolver (FastAPI)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi[standard]>=0.115",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "anthropic>=0.40",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.7",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
markers = [
    "live: hits the live Anthropic API (needs ANTHROPIC_API_KEY); excluded from default CI",
]
